# sugi

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  rebuild.sh  run.sh
examples/: CMakeLists.txt
examples/01_hello_world/: main.c
src/: array.h  ecs.h  hash.h  main.c
src/sugi/: core.c  core.h  render.c  texture.h
sugi/: CMakeLists.txt
sugi/src/array/: array.c
sugi/src/ecs/: ecs.c  ecs.h
sugi/src/hash/: hash.c  hash.h
sugi/src/sugi/: config.h  core.c  render.h  shader.c  shader.h  texture.c
